# equinox

./: .gitignore  CMakeLists.txt  README.md
cmake/: build.cmake  dependencies.cmake
script/: HeraldTool.py
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/Inc/: Hlog.hpp
src/Common/Log/: Log.cpp  Log.h
src/Common/inc/: hlog.hpp
src/Common/log/: Log.cpp  Log.h  log.cpp  log.h
src/Dependencies/: CMakeLists.txt
src/Herald/: HeraldApplication.cpp  HeraldApplication.hpp  HeraldInit.cpp  HeraldInit.hpp  HeraldTranslator.cpp  HeraldTranslator.hpp  addDefaultImportPaths.cpp
src/Localization/: CMakeLists.txt  en_US.ts  zh_CN.ts
src/View/: CMakeLists.txt  main.qml
src/View/Herald/: herald.qrc
src/View/herald/widget/: HeraldMenuBar.qml
src/common/: CMakeLists.txt
src/common/inc/: hlog.hpp
src/common/log/: log.cpp  log.h
src/dependencies/: CMakeLists.txt
src/herald/: CMakeLists.txt  Herald.cpp  Herald.hpp  HeraldApplication.cpp  HeraldApplication.hpp  HeraldInit.cpp  HeraldInit.hpp  addDefaultImportPaths.hpp  main.cpp
src/main/: CMakeLists.txt  main.cpp
src/qml/: Main.qml
src/view/: main.qml  main.qrc
src/view/herald/widget/: qmldir
src/view/images/: images.qrc
